Fix HTML structure (add body tag)

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
   <meta charset="UTF-8">
   <title>DJ DIANA</title>
 
@@ -9,12 +9,14 @@
   <link rel="stylesheet" href="visual.css">
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-</head>
+  </head>
 
-<div>
+<body>
+
+  <div>
   <header class="site-header"> djDIANA.com - THE BEST DJ FOR 2025
   </header>
-</div>
+  </div>
 <nav class="menu-wrapper">
 
 <!-- БАДЖ ЗВЕЗДА -->
@@ -119,3 +121,5 @@
         </div>
         
 </section>
+</body>
+</html>
