--- a/gallery.html
+++ b/gallery.html
@@ -1,1 +1,67 @@
 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+  <meta charset="UTF-8">
+  <title>DJ DIANA</title>
+
+  <!-- CSS ТУК -->
+  <link rel="stylesheet" href="gallery.css">
+  <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  </head>
+
+<body>
+</div>
+<nav class="menu-wrapper">
+
+<!-- БАДЖ ЗВЕЗДА -->
+  <div class="menu-badge-star">NEW</div>
+<!-- БАДЖ ЗВЕЗДА -->
+
+  <ul class="menu-bar">
+    <li><a href="#">Home</a></li>
+    <li class="has-dropdown">
+      <a href="#">Services ▾</a>
+      <ul class="dropdown">
+        <li><a href="#">DJ</a></li>
+        <li><a href="#">Lighting</a></li>
+        <li><a href="#">Sound</a></li>
+      </ul>
+    </li>
+     <li><a href="gallery.html">Gallery</a></li>
+    <li><a href="#">Contact</a></li>
+  </ul>
+
+  <div class="menu-icons">
+    <a href="/search" aria-label="Search">
+      <i class="fa-solid fa-magnifying-glass"></i>
+    </a>
+    <a href="/cart" aria-label="Cart">
+      <i class="fa-solid fa-cart-shopping"></i>
+    </a>
+  </div>
+</nav>
+  <section class="dj-gigs">
+    <h2> Diana's party </h2>
+  
+      <div class="gigs-gallery">
+        <div class="gig-card">
+          <img src="https://images.unsplash.com/photo-1492684223066-81342ee5ff30?auto=format&fit=crop&w=1200&q=80" alt="DJ Live Performance">
+          <p>Beach Party</p>
+       </div>
+
+        <div class="gig-card">
+          <img src="https://images.unsplash.com/photo-1516450360452-9312f5e86fc7?auto=format&fit=crop&w=1200&q=80" alt="DJ Live Performance">
+          <p>City Night Party</p>
+        </div>
+
+        <div class="gig-card">
+          <img src="https://images.unsplash.com/photo-1519671482749-fd09be7ccebf?auto=format&fit=crop&w=1200&q=80" alt="DJ Live Performance">
+          <p>Forest Pool Party</p>
+        </div>
+      </div>
+  </section>
+</nav>
+</body>
+</html>
