--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <li><a href="#">Sound</a></li>
       </ul>
     </li>
-    <li><a href="#">Gallery</a></li>
+     <li><a href="gallery.html">Gallery</a></li>
     <li><a href="#">Contact</a></li>
   </ul>
 
