--- a/gallery.html
+++ b/gallery.html
@@ -20,7 +20,7 @@
 <!-- БАДЖ ЗВЕЗДА -->
 
   <ul class="menu-bar">
-    <li><a href="#">Home</a></li>
+    <li><a href="index.html">Home</a></li>
     <li class="has-dropdown">
       <a href="#">Services ▾</a>
       <ul class="dropdown">
@@ -62,6 +62,21 @@
         </div>
       </div>
   </section>
+  <section class="footer"> 
+    <div class="footer-left">
+      <h2>SUBSCRIBE</h2> 
+    </div>
+        <div class="footer-center">
+          <form class="subscribe">
+            <input type="email" placeholder="Enter your email" required>
+            <button class="submit">➜</button>
+          </form>
+        </div>
+        <div class="footer-right">
+          © 2025 by YanevDesign
+        </div>
+        
+</section>
 </nav>
 </body>
 </html>
