--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
       <i class="fa-solid fa-cart-shopping"></i>
     </a>
   </div>
-
+</nav>
+  
+</nav>
 
 <section class="dj-gigs2">
   <h3>About DIANA</h3>
